--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,43 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+		<meta httpEquiv="X-UA-Compatible" content="IE=edge" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5, user-scalable=yes"
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="DGK Photography" />
+		<meta property="og:locale" content="hu_HU" />
+		<!-- TODO -->
+		<meta
+			property="og:image"
+			content="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/main_g.jpg"
+		/>
+		<!-- TODO -->
+
+		<link
+			rel="icon"
+			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/fav32.png"
+			sizes="32x32"
+		/>
+		<link
+			rel="icon"
+			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/fav128.png"
+			sizes="128x128"
+		/>
+		<link
+			rel="apple-touch-icon"
+			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/fav180.png"
+			sizes="180x180"
+		/>
+		<link
+			rel="icon"
+			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/fav192.png"
+			sizes="192x192"
+		/>
+
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
