--- a/src/app.html
+++ b/src/app.html
@@ -11,31 +11,29 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="DGK Photography" />
 		<meta property="og:locale" content="hu_HU" />
-		<!-- TODO -->
 		<meta
 			property="og:image"
 			content="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/main_g.jpg"
 		/>
-		<!-- TODO -->
 
 		<link
 			rel="icon"
-			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/fav32.png"
+			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/favicon-32.png"
 			sizes="32x32"
 		/>
 		<link
 			rel="icon"
-			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/fav128.png"
+			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/favicon-128.png"
 			sizes="128x128"
 		/>
 		<link
 			rel="apple-touch-icon"
-			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/fav180.png"
+			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/favicon-180.png"
 			sizes="180x180"
 		/>
 		<link
 			rel="icon"
-			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/fav192.png"
+			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/favicon-192.png"
 			sizes="192x192"
 		/>
 
