--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,8 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="DGK Photography" />
 		<meta property="og:locale" content="hu_HU" />
+		<meta name="keywords" content="fotó, képek, videó, film, fényképek, esküvő, esküvői" />
+		<meta name="author" content="Csizmadia Gergő" />
 		<meta
 			property="og:image"
 			content="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/main_g.jpg"
