--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,14 @@
 			property="og:image"
 			content="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/main_g.jpg"
 		/>
+		<script type='application/ld+json'>{
+			"url": "https://www.photographydgk.hu/",
+			"name": "DGK Photography",
+			"description": "",
+			"image": "https://dgk-site-storage.s3.eu-central-1.amazonaws.com/main_g.jpg",
+			"@context": "http://schema.org",
+			"@type": "WebSite"
+		}</script>
 
 		<link
 			rel="icon"
