--- a/src/app.html
+++ b/src/app.html
@@ -12,32 +12,12 @@
 		<meta property="og:locale" content="hu_HU" />
 		<meta name="keywords" content="fotó, képek, videó, film, fényképek, esküvő, esküvői, kisfilm" />
 		<meta name="author" content="Csizmadia Gergő" />
-		<meta
-			property="og:image"
-			content="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/main_g.jpg"
-		/>
 
-		<link
-			rel="icon"
-			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/favicon-32.png"
-			sizes="32x32"
-		/>
-		<link
-			rel="icon"
-			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/favicon-128.png"
-			sizes="128x128"
-		/>
-		<link
-			rel="apple-touch-icon"
-			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/favicon-180.png"
-			sizes="180x180"
-		/>
-		<link
-			rel="icon"
-			href="https://dgk-site-storage.s3.eu-central-1.amazonaws.com/favicon-192.png"
-			sizes="192x192"
-		/>
-
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="theme-color" content="#ffffff" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
 		%sveltekit.head%
 	</head>
